Added a real-time updated project progress widget to the focus session page for continuous tracking during work sessions.
Updated the project budget widget on the focus launcher to be more compact and display today's expected work time.
The weekly comparison chart for work budget vs. actual work is now better organized and clearly displays the difference between expected and completed hours.
1731381780369
Added a "Sessions" view for daily reports, displaying sessions grouped by day and color-coded by project.
Improved tracked time report to be more space-efficient and comfortable to navigate.
Added average workday and weekend time display next to the average day when the tracked time report is grouped by days.
Added start and end times for each workday when viewing daily reports with no project selected.
Added a line indicator for preferred end of work time when viewing daily reports in the Timesheet.
The tracked time report now remembers the selected interval for each time grouping. For example, if you change the interval on the "grouped by weeks" view, it won’t affect the interval setting on the "grouped by days" view.
1730944392505
Added a new option to switch the Goals timeline view between age-based and date-based formats.
A more comfortable and compact form for creating and editing goals.
Added a 'Start' button to tasks on the 'Tasks' page, enabling quick launch of a focus session for the selected task.
Increaser now auto-selects the last task worked on for a project whenever switching to that project.
Added "Achieve goals" article to the "Info" page.
1730435467902
Users can stop tracking habits without deleting them by making them inactive.
Merge "Track" and "Stats" habit views into a single page.
User can now write a plan for when exactly they will do the habit so they are more likely to stick with it.
Hovering over the consistency displays how often the user skips that habit.
User can see session duration while editing session end time.